# calc_num_2023

./: .gitignore  README.md  aula1_ponto_flutuante.ipynb  env.yaml  ex1_python.ipynb  ex2_vetores_plots.ipynb  ex_1_python.ipynb  ex_2_vetores_plots.ipynb  flake.nix  init.sh  pixi.toml  pyproject.toml
src/: collatz.py  fibonacci.py  lowest_power_ten.py  pitagoras.py  polynomials.py
